# corpus-leggi-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/corpus_leggi_tools/: __init__.py  bulk_load.py  converter.py  metadata.py  normattiva_client.py  repo_writer.py  sync_delta.py
tests/: test_bulk_load.py  test_converter.py  test_metadata.py  test_normattiva_client.py
